src/OcctNative/OcctOcaf.h

    struct OcctOcafColor
    {
        double red;
        double green;
        double blue;
        double alpha;
    };
    // XDE shapes and assemblies.
    OCCTBRIDGE_API const char* occt_ocaf_xde_shapes_entry(OcctOcafHandle handle);
    OCCTBRIDGE_API const char* occt_ocaf_xde_colors_entry(OcctOcafHandle handle);
    OCCTBRIDGE_API const char* occt_ocaf_xde_layers_entry(OcctOcafHandle handle);
    OCCTBRIDGE_API const char* occt_ocaf_xde_materials_entry(OcctOcafHandle handle);
    OCCTBRIDGE_API const char* occt_ocaf_xde_dgts_entry(OcctOcafHandle handle);
    OCCTBRIDGE_API const char* occt_ocaf_xde_views_entry(OcctOcafHandle handle);
    OCCTBRIDGE_API const char* occt_ocaf_xde_clipping_planes_entry(OcctOcafHandle handle);
    OCCTBRIDGE_API const char* occt_ocaf_xde_notes_entry(OcctOcafHandle handle);
    OCCTBRIDGE_API const char* occt_ocaf_xde_visual_materials_entry(OcctOcafHandle handle);
    OCCTBRIDGE_API int occt_ocaf_xde_get_length_unit(OcctOcafHandle handle, double* meters);
    OCCTBRIDGE_API int occt_ocaf_xde_set_length_unit(OcctOcafHandle handle, double meters);
    OCCTBRIDGE_API const char* occt_ocaf_xde_add_shape(OcctOcafHandle handle, OcctModelHandle model, OcctObjectId shapeId, int makeAssembly, int makePrepare);
    OCCTBRIDGE_API int occt_ocaf_xde_set_shape(OcctOcafHandle handle, OcctModelHandle model, const char* entry, OcctObjectId shapeId);
    OCCTBRIDGE_API OcctObjectId occt_ocaf_xde_get_shape(OcctOcafHandle handle, OcctModelHandle model, const char* entry);
    OCCTBRIDGE_API int occt_ocaf_xde_remove_shape(OcctOcafHandle handle, const char* entry, int removeCompletely);
    OCCTBRIDGE_API const char* occt_ocaf_xde_find_shape(OcctOcafHandle handle, OcctModelHandle model, OcctObjectId shapeId, int findInstance);
    OCCTBRIDGE_API int occt_ocaf_xde_shape_snapshot(OcctOcafHandle handle, int freeOnly);
    OCCTBRIDGE_API const char* occt_ocaf_xde_shape_at(OcctOcafHandle handle, int index);
    OCCTBRIDGE_API int occt_ocaf_xde_component_snapshot(OcctOcafHandle handle, const char* assemblyEntry, int recursive);
    OCCTBRIDGE_API const char* occt_ocaf_xde_component_at(OcctOcafHandle handle, int index);
    OCCTBRIDGE_API const char* occt_ocaf_xde_add_component(OcctOcafHandle handle, const char* assemblyEntry, const char* componentEntry, const OcctModelLocation* location);
    OCCTBRIDGE_API int occt_ocaf_xde_remove_component(OcctOcafHandle handle, const char* componentEntry);
    OCCTBRIDGE_API const char* occt_ocaf_xde_referred_shape(OcctOcafHandle handle, const char* componentEntry);
    OCCTBRIDGE_API int occt_ocaf_xde_get_location(OcctOcafHandle handle, const char* componentEntry, OcctModelLocation* location);
    OCCTBRIDGE_API const char* occt_ocaf_xde_set_location(OcctOcafHandle handle, const char* componentEntry, const OcctModelLocation* location);
    OCCTBRIDGE_API int occt_ocaf_xde_update_assemblies(OcctOcafHandle handle);
    OCCTBRIDGE_API int occt_ocaf_xde_is_shape(OcctOcafHandle handle, const char* entry);
    OCCTBRIDGE_API int occt_ocaf_xde_is_simple_shape(OcctOcafHandle handle, const char* entry);
    OCCTBRIDGE_API int occt_ocaf_xde_is_assembly(OcctOcafHandle handle, const char* entry);
    OCCTBRIDGE_API int occt_ocaf_xde_is_component(OcctOcafHandle handle, const char* entry);
    OCCTBRIDGE_API int occt_ocaf_xde_is_reference(OcctOcafHandle handle, const char* entry);
    OCCTBRIDGE_API int occt_ocaf_xde_is_free(OcctOcafHandle handle, const char* entry);
    OCCTBRIDGE_API int occt_ocaf_xde_is_subshape(OcctOcafHandle handle, const char* entry);
    // XDE colors, layers, materials and validation properties.
    OCCTBRIDGE_API int occt_ocaf_xde_color_snapshot(OcctOcafHandle handle);
    OCCTBRIDGE_API const char* occt_ocaf_xde_color_at(OcctOcafHandle handle, int index);
    OCCTBRIDGE_API int occt_ocaf_xde_get_color_definition(OcctOcafHandle handle, const char* colorEntry, OcctOcafColor* color);
    OCCTBRIDGE_API int occt_ocaf_xde_remove_color(OcctOcafHandle handle, const char* colorEntry);
    OCCTBRIDGE_API int occt_ocaf_xde_set_color(OcctOcafHandle handle, const char* entry, int colorType, OcctOcafColor color);
    OCCTBRIDGE_API int occt_ocaf_xde_get_color(OcctOcafHandle handle, const char* entry, int colorType, OcctOcafColor* color);
    OCCTBRIDGE_API int occt_ocaf_xde_unset_color(OcctOcafHandle handle, const char* entry, int colorType);
    OCCTBRIDGE_API int occt_ocaf_xde_set_visibility(OcctOcafHandle handle, const char* entry, int visible);
    OCCTBRIDGE_API int occt_ocaf_xde_is_visible(OcctOcafHandle handle, const char* entry);
    OCCTBRIDGE_API int occt_ocaf_xde_set_color_by_layer(OcctOcafHandle handle, const char* entry, int enabled);
    OCCTBRIDGE_API int occt_ocaf_xde_is_color_by_layer(OcctOcafHandle handle, const char* entry);
    OCCTBRIDGE_API const char* occt_ocaf_xde_add_layer(OcctOcafHandle handle, const char* utf8Name, int findVisible);
    OCCTBRIDGE_API int occt_ocaf_xde_remove_layer(OcctOcafHandle handle, const char* layerEntry);
    OCCTBRIDGE_API const char* occt_ocaf_xde_layer_name(OcctOcafHandle handle, const char* layerEntry);
    OCCTBRIDGE_API int occt_ocaf_xde_layer_snapshot(OcctOcafHandle handle);
    OCCTBRIDGE_API const char* occt_ocaf_xde_layer_at(OcctOcafHandle handle, int index);
    OCCTBRIDGE_API int occt_ocaf_xde_set_layer(OcctOcafHandle handle, const char* shapeEntry, const char* layerEntry, int shapeInOneLayer);
    OCCTBRIDGE_API int occt_ocaf_xde_unset_layer(OcctOcafHandle handle, const char* shapeEntry, const char* layerEntry);
    OCCTBRIDGE_API int occt_ocaf_xde_unset_layers(OcctOcafHandle handle, const char* shapeEntry);
    OCCTBRIDGE_API int occt_ocaf_xde_shape_layer_snapshot(OcctOcafHandle handle, const char* shapeEntry);
    OCCTBRIDGE_API int occt_ocaf_xde_set_layer_visibility(OcctOcafHandle handle, const char* layerEntry, int visible);
    OCCTBRIDGE_API int occt_ocaf_xde_is_layer_visible(OcctOcafHandle handle, const char* layerEntry);